# basic-projects

./: .gitignore  ideas.md
graphics/: image_pam.cpp  image_pam.hpp  meson.build  slideshow.cpp  slideshow.mk  sort_visualizer.cpp  utils.cpp  utils.hpp
graphics/slideshow_images/: 10.pam  2.pam  3.pam  4.pam  5.pam  6.pam  7.pam  8.pam  9.pam
